--- a/.gitignore
+++ b/.gitignore
@@ -8963,3 +8963,8 @@ pharma_deal_django/products/__pycache__/views.cpython-39.pyc
 pharma_deal_django/products/__pycache__/forms.cpython-39.pyc
 pharma_deal_django/products/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/views.cpython-39.pyc
+pharma_deal_django/authentication/__pycache__/views.cpython-39.pyc
+pharma_deal_django/pharma_deal_django/__pycache__/settings.cpython-39.pyc
+pharma_deal_django/pharma_deal_django/__pycache__/urls.cpython-39.pyc
+pharma_deal_django/products/__pycache__/urls.cpython-39.pyc
+pharma_deal_django/products/__pycache__/views.cpython-39.pyc
