--- a/.gitignore
+++ b/.gitignore
@@ -8968,3 +8968,4 @@ pharma_deal_django/pharma_deal_django/__pycache__/settings.cpython-39.pyc
 pharma_deal_django/pharma_deal_django/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/views.cpython-39.pyc
+pharma_deal_django/static/Favison SAAS -doc/img/Thumbs.db
