--- a/.gitignore
+++ b/.gitignore
@@ -8969,3 +8969,4 @@ pharma_deal_django/pharma_deal_django/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/views.cpython-39.pyc
 pharma_deal_django/static/Favison SAAS -doc/img/Thumbs.db
+pharma_deal_django/sessions/sessionidoxfdt0uuup4w35ibp8koxuejeaxuge18
