--- a/.gitignore
+++ b/.gitignore
@@ -8970,3 +8970,5 @@ pharma_deal_django/products/__pycache__/urls.cpython-39.pyc
 pharma_deal_django/products/__pycache__/views.cpython-39.pyc
 pharma_deal_django/static/Favison SAAS -doc/img/Thumbs.db
 pharma_deal_django/sessions/sessionidoxfdt0uuup4w35ibp8koxuejeaxuge18
+pharma_deal_django/products/__pycache__/views.cpython-39.pyc
+pharma_deal_django/products/__pycache__/forms.cpython-39.pyc
